test/sema/parameter-shadows-global-function.delta
// RUN: %check_errors %not %delta -typecheck %s

void bar() {}
void foo(int bar) {
    // TODO: Should call bar().
    // CHECK: [[@LINE+1]]:5: error: 'bar' is not a function
    bar();
}
